Refactor - start making use of newer java language features and start phasing out the totallylazy library code