@@ -1,19 +1,21 @@
 package com.googlecode.yatspec.junit;
 
-import com.googlecode.totallylazy.Callable1;
-import com.googlecode.totallylazy.Predicate;
 import org.junit.runner.manipulation.NoTestsRemainException;
 import org.junit.runners.BlockJUnit4ClassRunner;
 import org.junit.runners.model.FrameworkMethod;
 import org.junit.runners.model.InitializationError;
 
 import java.lang.annotation.Annotation;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
+import java.util.function.Function;
+import java.util.stream.Stream;
 
-import static com.googlecode.totallylazy.Sequences.sequence;
+import static java.util.stream.Collectors.toList;
 
 public class TableRunner extends BlockJUnit4ClassRunner {
-    private org.junit.runner.manipulation.Filter  filter;
+    private org.junit.runner.manipulation.Filter filter;
 
     public TableRunner(Class<?> klass) throws InitializationError {
         super(klass);
@@ -26,43 +28,40 @@ public class TableRunner extends BlockJUnit4ClassRunner {
 
     @Override
     protected List<FrameworkMethod> getChildren() {
-        return sequence(computeTestMethods()).flatMap(new Callable1<FrameworkMethod, Iterable<FrameworkMethod>>() {
-            public Iterable<FrameworkMethod> call(final FrameworkMethod frameworkMethod) {
-                final Table annotation = frameworkMethod.getAnnotation(Table.class);
-                if (annotation == null) {
-                    return sequence(frameworkMethod);
-                } else {
-                    return sequence(annotation.value()).map(decorateTestMethod(frameworkMethod));
-                }
-            }
-        }).toList();
+        return computeTestMethods().stream()
+                .flatMap(frameworkMethod -> {
+                    Optional<Table> optionalAnnotation = Optional.ofNullable(frameworkMethod.getAnnotation(Table.class));
+                    return optionalAnnotation
+                            .map(decorateTestMethodWithAnnotation(frameworkMethod))
+                            .orElse(List.of(frameworkMethod).stream());
+
+                }).collect(toList());
     }
 
-    private static Callable1<Row, FrameworkMethod> decorateTestMethod(final FrameworkMethod frameworkMethod) {
-        return new Callable1<Row, FrameworkMethod>() {
-            public FrameworkMethod call(Row row) {
-                return new DecoratingFrameworkMethod(frameworkMethod, row);
-            }
-        };
+    private Function<Table, Stream<FrameworkMethod>> decorateTestMethodWithAnnotation(FrameworkMethod frameworkMethod) {
+        return annotation -> Arrays.stream(annotation.value())
+                .map(decorateTestMethod(frameworkMethod));
+    }
+
+    private static Function<Row, FrameworkMethod> decorateTestMethod(final FrameworkMethod frameworkMethod) {
+        return row -> new DecoratingFrameworkMethod(frameworkMethod, row);
     }
 
     @Override
     protected List<FrameworkMethod> computeTestMethods() {
-        if(filter == null) {
+        if (filter == null) {
             return super.computeTestMethods();
         }
-        
-        return sequence(super.computeTestMethods()).filter(new Predicate<FrameworkMethod>() {
-            public boolean matches(FrameworkMethod frameworkMethod) {
-                return filter.shouldRun(describeChild(frameworkMethod));
-            }
-        }).toList();
+
+        return super.computeTestMethods().stream()
+                .filter(frameworkMethod -> filter.shouldRun(describeChild(frameworkMethod)))
+                .collect(toList());
     }
 
     @Override
     public void filter(org.junit.runner.manipulation.Filter filter) throws NoTestsRemainException {
         this.filter = filter;
-        if(computeTestMethods().isEmpty()){
+        if (computeTestMethods().isEmpty()) {
             throw new NoTestsRemainException();
         }
     }
